feat(api): Add support for deleteing a run, and querying by date range
